--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,10 +1,5 @@
-<!-- <ul>
-    <li *ngFor="let gif of resultados">
-        {{gif.title}}
-    </li>
-</ul> -->
 <div class="row">
-    <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6">
+    <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6 animate__animated animate__fadeIn animate__fast">
         <div class="card">
             <img [src]="gif.images.downsized_medium.url" 
                  [alt]="gif.title"
@@ -16,6 +11,5 @@
                 </p>
             </div>
         </div>
-
     </div>
 </div>
