--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,7 +7,10 @@
 
     <!-- un ngFor en el list -->
     <div class="list-group list-reset"> 
-        <a *ngFor="let item of historial" href="#" class="list-group-item list-group-item-action">
+        <a *ngFor="let item of historial" 
+            href="#"
+            (click)="buscar(item)"
+            class="list-group-item list-group-item-action">
             {{ item | titlecase }}
         </a>
     </div>
